--- a/Bugsnag.iOS/Bugsnag.iOS.csproj
+++ b/Bugsnag.iOS/Bugsnag.iOS.csproj
@@ -43,13 +43,19 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BugsnagClient.cs" />
-    <Compile Include="Data\ApplicationInfo.cs" />
-    <Compile Include="Data\ApplicationState.cs" />
-    <Compile Include="Data\SystemInfo.cs" />
-    <Compile Include="Data\SystemState.cs" />
+    <Compile Include="Data\TouchApplicationInfo.cs" />
+    <Compile Include="Data\TouchApplicationState.cs" />
+    <Compile Include="Data\TouchSystemInfo.cs" />
+    <Compile Include="Data\TouchSystemState.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bugsnag\Bugsnag.csproj">
+      <Project>{CDA61B61-8B8F-4271-8910-431D36B0D01A}</Project>
+      <Name>Bugsnag</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
