Remove Android.Util.Log usages.
Under certain conditions when app is crashing and we want to log
something using Android.Util.Log the ART runtime kills the app
complaining about new string constructor being called when throwable
in use or something.

--- a/Bugsnag.Android/Bugsnag.Android.csproj
+++ b/Bugsnag.Android/Bugsnag.Android.csproj
@@ -71,6 +71,9 @@
     <Compile Include="..\Bugsnag\Interceptor\TaskSchedulerInterceptor.cs">
       <Link>Interceptor\TaskSchedulerInterceptor.cs</Link>
     </Compile>
+    <Compile Include="..\Bugsnag\Util\Log.cs">
+      <Link>Util\Log.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
