--- a/Tests.Android/Properties/AndroidManifest.xml
+++ b/Tests.Android/Properties/AndroidManifest.xml
@@ -2,5 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="Tests.Android">
 	<uses-sdk />
 	<application android:label="Tests.Android">
+        <activity android:name="bugsnag.test.CrashingJavaActivity" android:exported="false" />
 	</application>
 </manifest>
