--- a/Samples/Bugsnag.Sample.Android/Properties/AndroidManifest.xml
+++ b/Samples/Bugsnag.Sample.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,6 @@
 	<uses-sdk />
 	<application android:label="Bugsnag.Sample.Android">
 	</application>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
