--- a/Samples/Bugsnag.Sample.Android/Android Sample.csproj
+++ b/Samples/Bugsnag.Sample.Android/Android Sample.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AndroidApp.cs" />
+    <Compile Include="BaseActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
