Change xamarin component to ios-unified.

--- a/Component/component.yaml
+++ b/Component/component.yaml
@@ -16,7 +16,7 @@ icons:
 screenshots:
   - Screenshots/BugsnagWeb.png
 libraries:
-  ios:
+  ios-unified:
     - ../Bugsnag/bin/Release/Bugsnag.dll
     - ../Bugsnag.iOS/bin/Release/Bugsnag.iOS.dll
   android:
